--- a/login.css
+++ b/login.css
@@ -94,7 +94,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
   padding: 0;
-  background: linear-gradient(-45deg, #000000, #55555c, #ffe600, #eceec3);
+  background: linear-gradient(-45deg, #ffe600, #eceec3, #000000, #55555c);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 }
